# lance-attack

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci.yml
configs/: bitcoinotc.yaml  default.yaml  lastfm.yaml  mooc.yaml  reddit.yaml  wikipedia.yaml
lance/: __init__.py  config.py  experiment.py
lance/attack/: __init__.py  baselines.py  candidates.py  diagnostics.py  hia.py  importance.py  lance.py  meta.py
lance/data/: __init__.py  dataset.py  negatives.py
lance/defense/: __init__.py  adv_training.py  baselines.py  consistency.py  screening.py
lance/eval/: __init__.py  metrics.py
lance/models/: __init__.py  graphmixer.py  link_predictor.py  memory.py  tgat.py  tgn.py
lance/training/: __init__.py  trainer.py
lance/utils/: __init__.py  logutils.py  seed.py
scripts/: _common.py  benchmark.py  evaluate.py  prepare_data.py  run_attack.py  run_lance.py  scalability.py  train.py  transfer_study.py  unlearning.py  validate_datasets.py
tests/: conftest.py  test_baselines.py  test_dataset.py  test_defense.py  test_experiment.py  test_graphmixer.py  test_importance.py  test_lance.py  test_meta.py  test_metrics.py  test_model.py  test_tgat.py  test_training.py
